devel
-----

* Upgrade jemalloc to version 5.3.0.

* Fixed BTS-860. Changed ArangoSearch index recovery procedure to
  remove necessity to always fully recreate index if IndexCreation marker
  encountered.

* Updated arangosync to v2.9.1.

* Added option `--enable-revision-trees` to arangorestore, which will add the
  attributes `syncByRevision` and `usesRevisionsAsDocumentIds` to the collection
  structure if they are missing. As a consequence, these collections created by
  arangorestore will be able to use revision trees and a faster getting-in-sync
  procedure after a restart. The option defaults to `true`, meaning the
  attributes will be added if they are missing. If the option is set to `false`,
  the attributes will not be added to the collection structure.
  If the attributes are already present in the dump data, they will not be
  modified by arangorestore irrespective of the setting of this option.

* Set "useRevisionsAsDocumentIds" to true when restoring collection data
  via arangorestore in case it is not set in the collection structure input
  data. This allows using revision trees for restored collections.

* Fix: Highly unlikely race in cluster maintenance. For every shard only
  one operation (change attribute, change leadership) should be performed
  at the same time. However if two changes are detected in the same hearbeat
  it could lead to both operations to be executed in parallel. In most cases
  this is also fine, but could lead to races on the same attribute, however
  the race will be sorted out in the next heartbeat interval.

* Added new optimization rule "arangosearch-constrained-sort" to perform
  sorting & limiting inside ArangoSearch View enumeration node in case of
  using just scoring for sort. 

* Improve log output for WAL recovery, by providing more information and
  making the wording more clear.

* Updated lz4 to version 1.9.3.

* Added option `--custom-query-file` to arangoexport, so that a custom query